[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudbees-cli"
version = "0.2.0"
description = "CloudBees CLI + TUI tool — manage CloudBees from your terminal"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "CloudBees Team"}]

dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.0"]

[project.scripts]
cb = "cb.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["cb*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
