[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bee-cloudbees-cli"
version = "0.3.0"
description = "bee — CloudBees CLI + TUI tool for the terminal"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "CloudBees Team"}]
keywords = ["cloudbees", "cli", "tui", "devops", "jenkins"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "cryptography>=42.0",
    "textual>=0.85.0",
    "rich",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.0"]

[project.scripts]
bee = "cb.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["cb*"]

[tool.setuptools.package-data]
"*" = ["*.sql", "*.tcss"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
